feat(users): minimal user management
