# backend/app/schemas/auth.py
@@ -2,7 +2,7 @@
 
 from uuid import UUID
 
-from pydantic import BaseModel
+from pydantic import BaseModel, ConfigDict, Field, SecretStr
 
 
 class TokenPayload(BaseModel):
@@ -15,5 +15,6 @@ class Token(BaseModel):
 
 
 class NewPassword(BaseModel):
+    model_config = ConfigDict(str_strip_whitespace=True)
     token: str
-    new_password: str
+    new_password: SecretStr = Field(min_length=8, max_length=40)
