# frontend/openapi.json
@@ -201,16 +201,101 @@
         "security": [{ "OAuth2PasswordBearer": [] }],
         "parameters": [
           {
-            "name": "skip",
-            "in": "query",
-            "required": false,
-            "schema": { "type": "integer", "default": 0, "title": "Skip" }
-          },
-          {
             "name": "limit",
             "in": "query",
             "required": false,
-            "schema": { "type": "integer", "default": 100, "title": "Limit" }
+            "schema": {
+              "type": "integer",
+              "maximum": 100,
+              "minimum": 1,
+              "description": "Page size limit",
+              "default": 50,
+              "title": "Limit"
+            },
+            "description": "Page size limit"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "minimum": 0,
+              "description": "Page offset",
+              "default": 0,
+              "title": "Offset"
+            },
+            "description": "Page offset"
+          },
+          {
+            "name": "is_active",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [{ "type": "boolean" }, { "type": "null" }],
+              "title": "Is Active"
+            }
+          },
+          {
+            "name": "is_superuser",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [{ "type": "boolean" }, { "type": "null" }],
+              "title": "Is Superuser"
+            }
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                { "type": "string", "maxLength": 255 },
+                { "type": "null" }
+              ],
+              "title": "Search"
+            }
+          },
+          {
+            "name": "start_created_at",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                { "type": "string", "format": "date-time" },
+                { "type": "null" }
+              ],
+              "title": "Start Created At"
+            }
+          },
+          {
+            "name": "end_created_at",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                { "type": "string", "format": "date-time" },
+                { "type": "null" }
+              ],
+              "title": "End Created At"
+            }
+          },
+          {
+            "name": "order_by",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "default": "created_at",
+              "title": "Order By"
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "required": false,
+            "schema": { "type": "string", "default": "desc", "title": "Order" }
           }
         ],
         "responses": {
@@ -218,7 +303,9 @@
             "description": "Successful Response",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/UsersPublic" }
+                "schema": {
+                  "$ref": "#/components/schemas/LimitOffsetPage_UserPublic_"
+                }
               }
             }
           },
@@ -373,9 +460,9 @@
     "/api/v1/users/{user_id}": {
       "get": {
         "tags": ["users"],
-        "summary": "Read User By Id",
+        "summary": "Read User",
         "description": "Get user by ID (superuser only).",
-        "operationId": "users_read_user_by_id",
+        "operationId": "users_read_user",
         "security": [{ "OAuth2PasswordBearer": [] }],
         "parameters": [
           {
@@ -4137,6 +4224,21 @@
         "required": ["items", "total", "limit", "offset"],
         "title": "LimitOffsetPage[RequirementPublic]"
       },
+      "LimitOffsetPage_UserPublic_": {
+        "properties": {
+          "items": {
+            "items": { "$ref": "#/components/schemas/UserPublic" },
+            "type": "array",
+            "title": "Items"
+          },
+          "total": { "type": "integer", "minimum": 0.0, "title": "Total" },
+          "limit": { "type": "integer", "minimum": 1.0, "title": "Limit" },
+          "offset": { "type": "integer", "minimum": 0.0, "title": "Offset" }
+        },
+        "type": "object",
+        "required": ["items", "total", "limit", "offset"],
+        "title": "LimitOffsetPage[UserPublic]"
+      },
       "Message": {
         "properties": { "message": { "type": "string", "title": "Message" } },
         "type": "object",
@@ -4160,7 +4262,14 @@
       "NewPassword": {
         "properties": {
           "token": { "type": "string", "title": "Token" },
-          "new_password": { "type": "string", "title": "New Password" }
+          "new_password": {
+            "type": "string",
+            "maxLength": 40,
+            "minLength": 8,
+            "format": "password",
+            "title": "New Password",
+            "writeOnly": true
+          }
         },
         "type": "object",
         "required": ["token", "new_password"],
@@ -4325,14 +4434,30 @@
       },
       "PrivateUserCreate": {
         "properties": {
-          "email": { "type": "string", "format": "email", "title": "Email" },
-          "password": { "type": "string", "title": "Password" },
+          "email": {
+            "type": "string",
+            "maxLength": 255,
+            "format": "email",
+            "title": "Email"
+          },
+          "password": {
+            "type": "string",
+            "maxLength": 40,
+            "minLength": 8,
+            "title": "Password"
+          },
           "first_name": {
-            "anyOf": [{ "type": "string" }, { "type": "null" }],
+            "anyOf": [
+              { "type": "string", "maxLength": 255 },
+              { "type": "null" }
+            ],
             "title": "First Name"
           },
           "last_name": {
-            "anyOf": [{ "type": "string" }, { "type": "null" }],
+            "anyOf": [
+              { "type": "string", "maxLength": 255 },
+              { "type": "null" }
+            ],
             "title": "Last Name"
           }
         },
@@ -4777,19 +4902,6 @@
         },
         "type": "object",
         "title": "UserUpdateMe"
-      },
-      "UsersPublic": {
-        "properties": {
-          "data": {
-            "items": { "$ref": "#/components/schemas/UserPublic" },
-            "type": "array",
-            "title": "Data"
-          },
-          "count": { "type": "integer", "title": "Count" }
-        },
-        "type": "object",
-        "required": ["data", "count"],
-        "title": "UsersPublic"
       },
       "ValidationError": {
         "properties": {
